fixes close button spacing

--- a/css/cadence.css
+++ b/css/cadence.css
@@ -3,7 +3,7 @@
 	top: 1px;
 	left: 0px;
 	width: 550px;
-	height: 110%;
+	height: 100%;
 	z-index: 9999;
 	opacity: 0.85;
   filter: alpha(opacity=85); /* For IE8 and earlier */
@@ -25,6 +25,7 @@
 	top: -6px;
 	right: -1px;
 	height: 62px;
+	padding-right: 220px;
 }
 .menu-btn{
 	position: absolute;
@@ -143,12 +144,13 @@ p.site.font-opensanscondensed{
 footer{height: 80px;}
 footer p{ font-size: 14px;}
 a.no-dec, a.no-dec:hover {text-decoration: none;}
-.footer-pad{padding-top: 25px;}
+.footer-pad{margin-top: 25px;}
 .equal-op{width: 65px; padding-left: 5px; }
 
 /* Custom, iPhone Retina */
-@media only screen and (min-width : 320px) {
-  .close-me{padding-right: 145px;}
+@media only screen and (min-width : 321px) {
+  .close-me{padding-right: 182px;}
+	.inner-menu{padding-left: 50px;}
 	/*.big-horizontal{ width: 300px; }*/
 	/*.img-siteplan{ width: 300px; }*/
 }
